--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
   "name": "node-qemu",
-  "version": "1.1.0",
+  "version": "0.1.0",
   "main": "index.js",
   "scripts": {
     "postinstall": "node postinstall.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "qemu",
+    "virtualization",
+    "vnc",
+    "emulator",
+    "headless",
+    "input-events",
+    "rfb",
+    "qmp"
+  ],
   "author": "",
   "license": "ISC",
   "description": "",
