--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "postinstall": "node postinstall.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "example:puppy-linux": "node examples/puppy-linux.js",
+    "example:android": "node examples/android.js"
   },
   "keywords": [
     "qemu",
